entire sidenav component: defining the $MbSidenavController in a named function, not anymore in a anonymous function, implemented the functionality to add a class when the sidenav is active, so we can hide the body overflow, to avoid the bar from hiding and showing, while the sidenav is opened (and another possible glitchs). added the method getOptions() to the $mbSidenav, so we can instantiate the "activeBodyClass" option and other future ones

--- a/stylesheets/_sidenav.scss
+++ b/stylesheets/_sidenav.scss
@@ -23,3 +23,7 @@
 		}
 	}
 }
+
+body.mb-sidenav-visible {
+	overflow: hidden;
+}
